fix alignment issue and create reusable component

--- a/src/Components/Card.css
+++ b/src/Components/Card.css
@@ -1,6 +1,6 @@
 .app-container {
-	width: 260px;
-	height: 260px;
+	width: 360px;
+	height: 360px;
 	background-color: blue;
 	border-radius: 4px;
 	color: #fff;
