--- a/src/Components/Detail.css
+++ b/src/Components/Detail.css
@@ -1,4 +1,12 @@
+.info-container {
+	margin-top: 100px;
+	padding: 20px;
+}
+
 h2,
 p {
 	color: #fff;
+}
+p {
+	margin-top: 5px;
 }
